# freeflix-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: v1.6.10-nerd-font.md
config/: freeflix_position.lua  input.conf  mpv.conf
data/: selectors.jsonc  source_portal.jsonc
scripts/: install-mac.sh  install.ps1  install.py  install.sh
scripts/wrappers/: haruna  mpv
src/freeflix_cli/: anilist.py  cli_utils.py  cloudflare.py  config_loader.py  defaults.py  doctor.py  health.py  history_ui.py  httpcache.py  i18n.py  icons.py  languages.py  main.py  mpv_ipc.py  net_config.py  notifications.py  player_manager.py  progress.py  providers_registry.py  proxy.py  recent.py  setup_assistant.py  splash.py  subtitles.py  terminal_image.py  themes.py  tracker.py  update_checker.py
src/freeflix_cli/handlers/: anilist.py  anime_sama.py  coflix.py  french_manga.py  french_stream.py  goldenanime.py  goldenms.py  nyaa.py  papystreaming.py  playback.py
src/freeflix_cli/scraping/: anime_sama.py  coflix.py  config.py  french_manga.py  french_stream.py  goldenanime.py  goldenms.py  nyaa.py  objects.py  papystreaming.py  player.py  resilient.py  subtitles.py  utils.py
tests/: test_batch_download.py  test_download_fixes.py  test_health.py  test_httpcache.py  test_keyboard.py  test_managed_binaries.py  test_mpv_ipc.py  test_nerd_font.py  test_proxy_ssrf.py  test_resilient.py  test_scraper_resilience.py  test_system_deps_cache.py  test_terminal_image.py
